applications/kavita/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita
  namespace: kavita
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "books.jvos.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kavita
          namespace: kavita
          port: 5000
          weight: 1
